--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code"
+    "import json\n",
+    "import requests as req"
    ]
   },
   {
@@ -50,7 +51,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "with open (\"..\\\\your-code\\\\pass.txt\", \"r\") as file:\n",
+    "\n",
+    "    pass_ = file.read()\n",
+    "\n",
+    "HEADER = {\"Authorization\": \"token \" + pass_}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/ironhack-datalabs/scavenger'\n",
+    "repo = req.get(url, headers = HEADER)\n",
+    "repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/{+path}'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.json()['contents_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents'\n",
+    "repo = req.get(url, headers = HEADER)\n",
+    "repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['15024',\n",
+       " '15534',\n",
+       " '17020',\n",
+       " '30351',\n",
+       " '40303',\n",
+       " '44639',\n",
+       " '45525',\n",
+       " '47222',\n",
+       " '47830',\n",
+       " '49418',\n",
+       " '50896',\n",
+       " '55417',\n",
+       " '55685',\n",
+       " '60224',\n",
+       " '64880',\n",
+       " '66032',\n",
+       " '68848',\n",
+       " '70751',\n",
+       " '70985',\n",
+       " '88596',\n",
+       " '89046',\n",
+       " '89338',\n",
+       " '91701',\n",
+       " '97881',\n",
+       " '98750']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carpetas = []\n",
+    "\n",
+    "for i in range(len(repo.json())):\n",
+    "    carpetas.append(repo.json()[i]['name'])\n",
+    "\n",
+    "carpetas = carpetas[1:len(repo.json())]\n",
+    "carpetas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['15024/.0006.scavengerhunt',\n",
+       " '15534/.0008.scavengerhunt',\n",
+       " '15534/.0012.scavengerhunt',\n",
+       " '17020/.0007.scavengerhunt',\n",
+       " '30351/.0021.scavengerhunt',\n",
+       " '40303/.0022.scavengerhunt',\n",
+       " '44639/.0005.scavengerhunt',\n",
+       " '45525/.0018.scavengerhunt',\n",
+       " '47222/.0016.scavengerhunt',\n",
+       " '47222/.0024.scavengerhunt',\n",
+       " '47830/.0010.scavengerhunt',\n",
+       " '49418/.0014.scavengerhunt',\n",
+       " '50896/.0011.scavengerhunt',\n",
+       " '55417/.0023.scavengerhunt',\n",
+       " '55685/.0020.scavengerhunt',\n",
+       " '60224/.0003.scavengerhunt',\n",
+       " '68848/.0004.scavengerhunt',\n",
+       " '70751/.0019.scavengerhunt',\n",
+       " '70985/.0017.scavengerhunt',\n",
+       " '88596/.0002.scavengerhunt',\n",
+       " '89338/.0013.scavengerhunt',\n",
+       " '91701/.0015.scavengerhunt',\n",
+       " '97881/.0009.scavengerhunt',\n",
+       " '98750/.0001.scavengerhunt']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paths = []\n",
+    "\n",
+    "for i in carpetas:\n",
+    "    \n",
+    "    url = 'https://github.com/ironhack-datalabs/scavenger/tree/master/' + i\n",
+    "    repo = req.get(url,headers=HEADER)\n",
+    "    \n",
+    "    for i in repo.json()['payload']['tree']['items']:\n",
+    "        if i[\"name\"].endswith(\"hunt\"):\n",
+    "            paths.append(i[\"path\"])\n",
+    "paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': '.0001.scavengerhunt',\n",
+       "  'path': '98750/.0001.scavengerhunt',\n",
+       "  'contentType': 'file'},\n",
+       " {'name': '20', 'path': '98750/20', 'contentType': 'file'},\n",
+       " {'name': '62', 'path': '98750/62', 'contentType': 'file'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.json()['payload']['tree']['items']"
    ]
   }
  ],
@@ -70,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
