--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install python-dotenv"
+    "#%pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,15 +102,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/ironhack-datalabs/datamad1020-rev/forks' #defino la URL de la API de GitHub\n",
+    "res = requests.get(url)#hago una solicitud GET a la URL y almaceno la respuesta en la variable res\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''transformo el JSON en una lista de diccionarios, del primer diccionario cojo el valor \"languages_url\", \n",
+    "que es la URL de la API de Github donde están los lenguajes y lo almaceno en la variable url_lang'''\n",
+    "url_lang = res.json()[0][\"languages_url\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Jupyter Notebook', 'HTML', 'Python'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#realizo una solicitud GET a la URL que almacené en url_lang y la guardo la respuesta en la variable res\n",
+    "res = requests.get(url_lang)\n",
+    "res.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jupyter Notebook': 767922, 'HTML': 498316, 'Python': 38591}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_fork_lang = res.json() #transformo el JSON devuelto en un diccionario\n",
+    "url_fork_lang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jupyter Notebook', 'HTML', 'Python']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#creo una lista vacía donde almacenaré los lenguajes iterados\n",
+    "languages = []\n",
+    "#itero las claves del diccionario que es donde están los lenguajes\n",
+    "for i in url_fork_lang.keys():\n",
+    "        #en el caso de lo devuelto por i no esté, añandirlo a la lista languages\n",
+    "    if i not in languages:\n",
+    "        languages.append(i)\n",
+    "languages"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.3"
   },
   "toc": {
    "base_numbering": 1,
