--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -29,12 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "#Your code\n",
+    "import json\n",
+    "import requests\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from datetime import datetime, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "creative-stable",
    "metadata": {},
    "outputs": [],
@@ -44,16 +49,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ongoing-taylor",
+   "execution_count": 2,
+   "id": "c0577212",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "commits_url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/commits'\n",
+    "#con datetime.now y timedelta obtengo la fecha la semana pasada\n",
+    "last_week = (datetime.now() - timedelta(weeks=1)).isoformat()\n",
+    "#creo una variable parámetros para la solicitud GET\n",
+    "parametros = {'since': last_week,}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1daa803e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#para solicitar el GET, además de la URL le introduzco un parámetro con la fecha\n",
+    "res = requests.get(commits_url, params = parametros)\n",
+    "#almaceno el res en forma de JSON dentro de la variable commits\n",
+    "commits = res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9d2f4598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La semana pasada hubo 21 commits\n"
+     ]
+    }
+   ],
+   "source": [
+    "#número de commits\n",
+    "num_commits = len(commits)\n",
+    "print(f'La semana pasada hubo {num_commits} commits')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
   },
   "toc": {
    "base_numbering": 1,
