--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -35,28 +35,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "toxic-trading",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code"
+    "# Your code\n",
+    "import json\n",
+    "import requests\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "github = os.getenv(\"token\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "static-stopping",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example: print(variable[:10]) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf54d7aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents'\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "\n",
+    "archivos = []\n",
+    "for item in response.json():\n",
+    "    if isinstance(item, dict) and isinstance(item.get('name'), str) and item['name'].endswith('.scavengerhunt'):\n",
+    "        archivos.append(item['name'])\n",
+    "print(archivos)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29afc272",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -70,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
   },
   "toc": {
    "base_numbering": 1,
