--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,28 +24,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "import requests as req"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "creative-stable",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "url =  'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/commits?since=2023-10-28'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ongoing-taylor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = req.get(url).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023-11-06T12:51:31Z'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[0]['commit']['author']['date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commits = []\n",
+    "\n",
+    "\n",
+    "\n",
+    "for c in res:\n",
+    "    \n",
+    "    if c['commit']['author']['date'] > '2023-10-28':\n",
+    "        \n",
+    "        commits.append(c)\n",
+    "        \n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(commits)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ongoing-taylor",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -67,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
